--- a/Detector.tex
+++ b/Detector.tex
@@ -206,21 +206,18 @@ Typically, the generation of an event follows several subsequent steps which are
 \end{equation}
 Here, $f(x, \mu_{F})$ are the PDFs of the interacting protons which depend on the factorization scale $\mu_{F}$ whereas $\sigma_{ab \rightarrow n}$ indicates the parton-level cross section for the production of a final state $n$ from partons $a$ and $b$. This parton-level cross section depends on the final-state phase space, the factorization scale and the renormalisation scale $\mu_{R}$ as well as the corresponding matrix element. The factorization and renormalization scale are unphysical and have to be chosen for the generation process. Often the process possesses a typical hard scale $Q^{2}$ so that the choice $\mu_{F} = \mu_{R} = Q^{2}$ is made. However, this choice is not fixed by first principles.
 \item \textbf{Parton shower:} After the production in the hard interaction the outgoing partons start to form a shower, \ie cascades of further partons emerge. Typically, this happens with descending amounts of momentum transfer from the high scales down to low scales around 1\gev. This evolution is typically described by a probabilistic shower algorithm. In addition to a parton shower related to the outgoing partons which is referred to as \textit{final-state radiation} (FSR), partons can already radiate off other partons before the actual hard process takes place. This effect is known as \textit{initial-state radiation} and can be described by similar principles as FSR. However, in the case of ISR it is inevitable to consider that not all partons from the ISR shower necessarily take part in any hard process and thus have to be related to the proton remnant.  
- \item \textbf{Hadronization:} The evolution of the parton shower continues until low scales in momentum transfer are reached and so the final state partons eventually start to form colour neutral hadrons. In the context of simulation the term \textit{hadronization} describes the particular model which is used in order to specify the transition from the partonic state to the complete hadronic final state. Since the hadronization involves low-energetic processes it can not be treated within perturbation theory. In principle one distinguishes between \textit{string models} (\cf e.g.~\cite{Andersson198331}) and \textit{cluster models} (\cf e.g.~\cite{Amati197987, Bassetto1979207}) in order to characterize the hadronization. While the first model describes directly the transition from the parton to the hadron based on the assumption of linear confinement, the second model introduces an intermediate step of cluster objects with mass scales around a few \gev.  
+ \item \textbf{Hadronization:} The evolution of the parton shower continues until low scales in momentum transfer are reached and so the final state partons eventually start to form colour neutral hadrons. In the context of simulation the term \textit{hadronization} describes the particular model which is used in order to specify the transition from the partonic state to the complete hadronic final state. Since the hadronization involves low-energetic processes it can not be treated within perturbation theory. In principle one distinguishes between \textit{string models} (\cf e.g.~\cite{Andersson198331}) and \textit{cluster models} (\cf e.g.~\cite{Amati197987, Bassetto1979207}) in order to characterize the hadronization. While the first model describes directly the transition from the parton to the hadron based on the assumption of linear confinement, the second model introduces an intermediate step of cluster objects with mass scales around a few \gev. Particles arising from the hadronization are denoted with \textit{generator-level} particles and labelled 'gen' within this thesis.
  \item \textbf{Decay:} After the hadronization process a couple of unstable hadrons are present in the event whose decay into stable particles must be modelled. Stable in this context means that they do not decay further within the typical collider timescales. Thus, the observable final-state hadrons result from a convolution of the hadronization process with the decay modelling. Concerning the decay process a choice has to be made regarding the hadrons which shall be included in the simulation and the respective decay modes which have to be considered. Mainly, theses choices are based on experimental results in combination with theoretical assumptions. Typical differences occur e.g. in the consideration of excited mesons or heavy baryon multiplets as well as an appropiate treatment of matrix elements and spin correlations during the decay. 
  \item \textbf{Underlying event:} In addition to hadrons emerging from the process connected directly to the hard interaction, further contributions to the event can be present which is reffered to as \textit{underlying event} (UE). The UE activity can be e.g. caused by additional interactions occuring for incoming partons, which is known as \textit{multiple parton interaction} (MPI), or by interactions arising from the proton remnants. In general, such effects contribute to the total amount of scattered energy and increase the number of particles appearing in the hadronization process. 
 \end{description}
-The various sub-processes described above are the basis of various event generators which differ in some aspects concerning the treatment of individual sub-processes in the event simulation. Some of such generators, which are used in this thesis, are the following:   
+The various sub-processes described above are the basis of various event generators which differ in some aspects concerning the treatment of individual sub-processes in the event simulation. In this thesis, different generators are used:
 \begin{description}
- \item \textbf{\pythia:}
- \item \textbf{\madgraph:}
- \item \textbf{\herwig:}
+ \item \textbf{\pythia}~\cite{Sjostrand:2006za}: \pythia is a general purpose event generator which has been used already extensively at previous collider experiments. It is designed to simulate collisions of either hadrons or same-generation leptons. This means that it is well suited to modell the required $pp$ collisions, but is currently not usable for e.g. $ep$ or $\gamma p$ processes. The highest order of particles involved in the hard interaction that can be simulated with \pythia are $2 \rightarrow 3$ processes. Nonetheless, more than three final state particles can arise for instance from the parton shower. Besides the simulation of whole physics events including all relevant steps, \pythia can also be interfaced to other generator programs in order to carry out the parton shower and hadronization step only.
+ \item \textbf{\herwig}~\cite{Bahr:2008pv}: \herwig is as well as \pythia a general purpose MC generator.
+ \item \textbf{\madgraph}~\cite{Alwall:2007st}: \madgraph is a general-purpose matrix-element program. 
+ \item \textbf{\textsc{Powheg}}~\cite{Oleari:2010nx}: The \textsc{powheg} programme provides accurate QCD computations based on matrix elements up to next-to-leading order following the concept proposed in~\cite{Nason:2004rx}. It can be interfaced to shower MC programs like \pythia or \herwig in order to perform the subsequent showering process.   
 \end{description}
-In order to evaluate the interaction of the generated particles with the detector material the passage of the particles through the detector is simulated with a model of the CMS apparatus. Depending on the details of the detector model this is referred to as \textit{full simulation} or \textit{fast simulation} \todo{Quellen}. Some of the differences are described in the following: 
-\begin{description}
- \item \textbf{Full simulation:} 
- \item \textbf{Fast simulation:} 
-\end{description}
-Finally, recorded collision data as well as simulated events are present in the same data format. This allows to use the same reconstruction techniques in order to build the event and derive physics objects from the obtained detector signals.
+In order to evaluate the interaction of the generated particles with the detector material the passage of the particles through the detector is simulated. This is done based on a detailled model of the CMS apparatus utilizing the GEANT4 programme~\cite{Agostinelli2003250} and referred to as \textit{full simulation}. Full simulation is quite extensive in computing time and thus for several purposes also a simplified scheme of the detector model is used which is known as \textit{fast simulation}~\cite{Abdullin:2011zz}. Especially in analyses where many signal samples are needed to scan a wide parameter range, like e.g. in SUSY analyses, the usage of the fast simulation is very beneficial. A comparison of several relevant kinematic distributions in real collision events to simulated events obtained from fast simulation shows a quite good agreement~\cite{CMS-DP-2010-039}. In particular, also jet related quantities like the sum of calorimetric jet momenta or the missing transverse momentum are modelled with a similar accuracy in full and fast simulation. \\  
+Finally, recorded collision data as well as simulated events including the modelling of the passage through the detector are present in the same data format which allows to apply equal reconstruction techniques in order to derive physics objects from the obtained events.
 
 
