--- a/Thesis.bib
+++ b/Thesis.bib
@@ -3551,6 +3551,22 @@ author = "A. Bassetto and M. Ciafaloni and G. Marchesini"
      doi       = "10.1088/1126-6708/2007/09/028"
 }
 
+@article{Alwall:2007st,
+      author         = "Alwall, Johan and Demin, Pavel and de Visscher, Simon and
+                        Frederix, Rikkert and Herquet, Michel and others",
+      title          = "{MadGraph/MadEvent v4: The New Web Generation}",
+      journal        = "JHEP",
+      volume         = "0709",
+      pages          = "028",
+      doi            = "10.1088/1126-6708/2007/09/028",
+      year           = "2007",
+      eprint         = "0706.2334",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "SLAC-PUB-12603, CP3-07-17",
+      SLACcitation   = "%%CITATION = ARXIV:0706.2334;%%",
+}
+
 @Article{bib:sjostrand:pythia,
      author    = "Sjostrand, Torbjorn and Mrenna, Stephen and Skands, Peter Z.",
      title     = "{PYTHIA 6.4 Physics and Manual}",
@@ -3559,6 +3575,39 @@ author = "A. Bassetto and M. Ciafaloni and G. Marchesini"
      year      = "2006",
      pages     = "026",
      doi       = "10.1088/1126-6708/2006/05/026"
+}
+
+@article{Sjostrand:2006za,
+      author         = "Sjostrand, Torbjorn and Mrenna, Stephen and Skands, Peter
+                        Z.",
+      title          = "{PYTHIA 6.4 Physics and Manual}",
+      journal        = "JHEP",
+      volume         = "0605",
+      pages          = "026",
+      doi            = "10.1088/1126-6708/2006/05/026",
+      year           = "2006",
+      eprint         = "hep-ph/0603175",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-06-052-CD-T, LU-TP-06-13",
+      SLACcitation   = "%%CITATION = HEP-PH/0603175;%%",
+}
+
+@article{Bahr:2008pv,
+      author         = "Bahr, M. and Gieseke, S. and Gigg, M.A. and Grellscheid,
+                        D. and Hamilton, K. and others",
+      title          = "{Herwig++ Physics and Manual}",
+      journal        = "Eur.Phys.J.",
+      volume         = "C58",
+      pages          = "639-707",
+      doi            = "10.1140/epjc/s10052-008-0798-9",
+      year           = "2008",
+      eprint         = "0803.0883",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2008-038, CAVENDISH-HEP-08-03, KA-TP-05-2008,
+                        DCPT-08-22, IPPP-08-11, CP3-08-05",
+      SLACcitation   = "%%CITATION = ARXIV:0803.0883;%%",
 }
 
 @article{bib:isajet,
@@ -3582,6 +3631,37 @@ author = "A. Bassetto and M. Ciafaloni and G. Marchesini"
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph"
 }
+
+@article{Oleari:2010nx,
+      author         = "Oleari, Carlo",
+      title          = "{The POWHEG-BOX}",
+      journal        = "Nucl.Phys.Proc.Suppl.",
+      volume         = "205-206",
+      pages          = "36-41",
+      doi            = "10.1016/j.nuclphysbps.2010.08.016",
+      year           = "2010",
+      eprint         = "1007.3893",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1007.3893;%%",
+}
+
+@article{Nason:2004rx,
+      author         = "Nason, Paolo",
+      title          = "{A New method for combining NLO QCD with shower Monte
+                        Carlo algorithms}",
+      journal        = "JHEP",
+      volume         = "0411",
+      pages          = "040",
+      doi            = "10.1088/1126-6708/2004/11/040",
+      year           = "2004",
+      eprint         = "hep-ph/0409146",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "BICOCCA-FT-04-11",
+      SLACcitation   = "%%CITATION = HEP-PH/0409146;%%",
+}
+
 
 @manual{bib:cteq:web,
   collaboration = {CTEQ},
@@ -3631,6 +3711,28 @@ author = "A. Bassetto and M. Ciafaloni and G. Marchesini"
   note          = {https://twiki.cern.ch/twiki/bin/view/CMSPublic/SWGuideFastSimulation, Topic revision: r409},
   url           = {https://twiki.cern.ch/twiki/bin/view/CMSPublic/SWGuideFastSimulation},
   year          = {2011}
+}
+
+@article{Abdullin:2011zz,
+      author         = "Abdullin, S. and Azzi, P. and Beaudette, F. and Janot, P.
+                        and Perrotta, A.",
+      title          = "{The fast simulation of the CMS detector at LHC}",
+      collaboration  = "CMS Collaboration",
+      journal        = "J.Phys.Conf.Ser.",
+      volume         = "331",
+      pages          = "032049",
+      doi            = "10.1088/1742-6596/331/3/032049",
+      year           = "2011",
+      SLACcitation   = "%%CITATION = 00462,331,032049;%%",
+}
+
+@article{CMS-DP-2010-039,
+      title         = "{Comparison of the Fast Simulation of CMS with the first
+                       LHC data}",
+      collaboration = "CMS Collaboration",
+      month         = "Oct",
+      year          = "2010",
+      note          = "CMS-DP-2010-039"
 }
 
 @article{Agostinelli2003250,
