--- a/Detector.tex
+++ b/Detector.tex
@@ -212,10 +212,10 @@ Here, $f(x, \mu_{F})$ are the PDFs of the interacting protons which depend on th
 \end{description}
 The various sub-processes described above are the basis of various event generators which differ in some aspects concerning the treatment of individual sub-processes in the event simulation. In this thesis, different generators are used:
 \begin{description}
- \item \textbf{\pythia}~\cite{Sjostrand:2006za}: \pythia is a general purpose event generator which has been used already extensively at previous collider experiments. It is designed to simulate collisions of either hadrons or same-generation leptons. This means that it is well suited to modell the required $pp$ collisions, but is currently not usable for e.g. $ep$ or $\gamma p$ processes. The highest order of particles involved in the hard interaction that can be simulated with \pythia are $2 \rightarrow 3$ processes. Nonetheless, more than three final state particles can arise for instance from the parton shower. Besides the simulation of whole physics events including all relevant steps, \pythia can also be interfaced to other generator programs in order to carry out the parton shower and hadronization step only.
- \item \textbf{\herwig}~\cite{Bahr:2008pv}: \herwig is as well as \pythia a general purpose MC generator.
- \item \textbf{\madgraph}~\cite{Alwall:2007st}: \madgraph is a general-purpose matrix-element program. 
- \item \textbf{\textsc{Powheg}}~\cite{Oleari:2010nx}: The \textsc{powheg} programme provides accurate QCD computations based on matrix elements up to next-to-leading order following the concept proposed in~\cite{Nason:2004rx}. It can be interfaced to shower MC programs like \pythia or \herwig in order to perform the subsequent showering process.   
+ \item \textbf{PYTHIA}~\cite{Sjostrand:2006za}: \pythia is a general purpose event generator which has been used already extensively at previous collider experiments. It is designed to simulate collisions of either hadrons or same-generation leptons. This means that it is well suited to modell the required $pp$ collisions, but is currently not usable for e.g. $ep$ or $\gamma p$ processes. The highest multiplicity of particles involved in the hard interaction that can be simulated with \pythia are $2 \rightarrow 3$ processes. Nonetheless, more than three final state particles can arise for instance from the parton shower. Besides the simulation of whole physics events including all relevant steps, \pythia can also be interfaced to other generator programs in order to carry out the parton shower and hadronization step only.
+ \item \textbf{HERWIG++}~\cite{Bahr:2008pv}: \herwig is as well as \pythia a general purpose MC generator. It provides the possibility to simulate high-energy collisions for lepton-lepton, lepton-hadron and hadron-hadron processes with special emphasis on the modelling of QCD radiation. Thus, the distinct feature of \herwig is that colour coherence effects are taken into account by employing angular ordered parton showers meaning that the coherence of soft radiation is treated correctly.
+ \item \textbf{MADGRAPH}~\cite{Alwall:2014hca}: \madgraph is a general-purpose matrix-element program and designed to provide accurate descriptions of multiparton processes. It can commonly be interfaced to \pythia for the realisation of the showering and hadronization.
+ \item \textbf{POWHEG}~\cite{Oleari:2010nx}: The \textsc{powheg} programme provides accurate QCD computations based on matrix elements up to next-to-leading order following the concept proposed in~\cite{Nason:2004rx}. It can be interfaced to shower programs like \pythia or \herwig in order to perform the subsequent showering process.   
 \end{description}
 In order to evaluate the interaction of the generated particles with the detector material the passage of the particles through the detector is simulated. This is done based on a detailled model of the CMS apparatus utilizing the GEANT4 programme~\cite{Agostinelli2003250} and referred to as \textit{full simulation}. Full simulation is quite extensive in computing time and thus for several purposes also a simplified scheme of the detector model is used which is known as \textit{fast simulation}~\cite{Abdullin:2011zz}. Especially in analyses where many signal samples are needed to scan a wide parameter range, like e.g. in SUSY analyses, the usage of the fast simulation is very beneficial. A comparison of several relevant kinematic distributions in real collision events to simulated events obtained from fast simulation shows a quite good agreement~\cite{CMS-DP-2010-039}. In particular, also jet related quantities like the sum of calorimetric jet momenta or the missing transverse momentum are modelled with a similar accuracy in full and fast simulation. \\  
 Finally, recorded collision data as well as simulated events including the modelling of the passage through the detector are present in the same data format which allows to apply equal reconstruction techniques in order to derive physics objects from the obtained events.
