--- a/Thesis.bib
+++ b/Thesis.bib
@@ -3541,14 +3541,19 @@ url = "http://www.sciencedirect.com/science/article/pii/0370269379906877",
 author = "A. Bassetto and M. Ciafaloni and G. Marchesini"
 }
 
-@Article{bib:alwall:madgraph,
-     author    = "Alwall, Johan and others",
-     title     = "{MadGraph/MadEvent v4: The New Web Generation}",
-     journal   = "JHEP",
-     volume    = "09",
-     year      = "2007",
-     pages     = "028",
-     doi       = "10.1088/1126-6708/2007/09/028"
+@article{Stelzer:1994ta,
+      author         = "Stelzer, T. and Long, W.F.",
+      title          = "{Automatic generation of tree level helicity amplitudes}",
+      journal        = "Comput.Phys.Commun.",
+      volume         = "81",
+      pages          = "357-371",
+      doi            = "10.1016/0010-4655(94)90084-1",
+      year           = "1994",
+      eprint         = "hep-ph/9401258",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MAD-PH-813",
+      SLACcitation   = "%%CITATION = HEP-PH/9401258;%%",
 }
 
 @article{Alwall:2007st,
@@ -3567,14 +3572,23 @@ author = "A. Bassetto and M. Ciafaloni and G. Marchesini"
       SLACcitation   = "%%CITATION = ARXIV:0706.2334;%%",
 }
 
-@Article{bib:sjostrand:pythia,
-     author    = "Sjostrand, Torbjorn and Mrenna, Stephen and Skands, Peter Z.",
-     title     = "{PYTHIA 6.4 Physics and Manual}",
-     journal   = "JHEP",
-     volume    = "05",
-     year      = "2006",
-     pages     = "026",
-     doi       = "10.1088/1126-6708/2006/05/026"
+@article{Alwall:2014hca,
+      author         = "Alwall, J. and Frederix, R. and Frixione, S. and Hirschi,
+                        V. and Maltoni, F. and others",
+      title          = "{The automated computation of tree-level and
+                        next-to-leading order differential cross sections, and
+                        their matching to parton shower simulations}",
+      journal        = "JHEP",
+      volume         = "1407",
+      pages          = "079",
+      doi            = "10.1007/JHEP07(2014)079",
+      year           = "2014",
+      eprint         = "1405.0301",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2014-064, CP3-14-18, LPN14-066, MCNET-14-09,
+                        ZU-TH-14-14",
+      SLACcitation   = "%%CITATION = ARXIV:1405.0301;%%",
 }
 
 @article{Sjostrand:2006za,
